# procon-assistant

./: .gitignore  Cargo.toml  README.md  windbg_init.js
.github/workflows/: build.yaml
src/: addcase.rs  clip.rs  common.rs  compile.rs  config.rs  delcase.rs  init.rs  initdirs.rs  main.rs  preprocess.rs  run.rs  solve_include.rs  tags.rs
src/download/: atcoder.rs  local.rs  mod.rs  print_msg.rs
src/fetch/: aoj.rs  atcoder.rs  mod.rs  print_msg.rs
src/imp/: clip.rs  common.rs  compile.rs  config.rs  debug_macros.rs  fs.rs  mod.rs  process.rs  progress.rs  srcfile.rs  test_case.rs
src/imp/auth/: aoj.rs  atcoder.rs  mod.rs
src/imp/download/: atcoder.rs  local.rs  mod.rs
src/imp/fetch/: aoj.rs  atcoder.rs  mod.rs
src/imp/initdirs/: mod.rs
src/imp/langs/: cpp.rs  mod.rs  python.rs  rust.rs
src/imp/preprocess/: cpp.rs  mod.rs  rust.rs
src/imp/test_case/: mod.rs
src/imp/test_case/judge_result/: mod.rs  output_diff.rs
src/login/: atcoder.rs  mod.rs
src/run/: mod.rs
src/template/: .clang_complete  main.cpp
src/ui/: addcase.rs  clip.rs  compile.rs  delcase.rs  doc.rs  init.rs  initdirs.rs  mod.rs  open.rs  preprocess.rs  print_macros.rs  run.rs  tags.rs
src/ui/download/: atcoder.rs  local.rs  mod.rs
src/ui/fetch/: aoj.rs  atcoder.rs  mod.rs
src/ui/login/: aoj.rs  atcoder.rs  mod.rs
template/: compile_commands.json  main.cpp
