[package]
authors = ["statiolake <statiolake@gmail.com>"]
name = "procon-assistant"
version = "0.1.0"
edition = "2018"

[dependencies]
clipboard = "0.5.0"
dirs = "2.0.2"
encoding = "0.2.33"
percent-encoding = "2.1.0"
regex = "1.3.5"
reqwest = "0.10.4"
rpassword = "4.0.5"
scraper = "0.11.0"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
lazy_static = "1.4.0"
atty = "0.2.14"
which = "3.1.1"
current_exe = { git = "https://github.com/statiolake/current-exe-rs" }
to_absolute = { git = "https://github.com/statiolake/to-absolute-rs" }
anyhow = "1.0.27"
thiserror = "1.0.12"
clap = { git = "https://github.com/clap-rs/clap" }
async-std = "1.5.0"
chrono = "0.4.11"
console = "0.10.0"
vsplit = "0.1.0"
itertools = "0.9.0"
futures = "0.3.4"
splitv = "0.2.1"
