[package]
authors = ["statiolake <statiolake@gmail.com>"]
name = "procon-assistant"
version = "0.1.0"
edition = "2018"

[dependencies]
clipboard = "0.5.0"
dirs = "2.0.2"
encoding = "0.2.33"
percent-encoding = "2.1.0"
regex = "1.3.5"
reqwest = { version = "0.10.4", features = ["blocking", "cookies"] }
rpassword = "4.0.5"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
lazy_static = "1.4.0"
which = "3.1.1"
current_exe = { git = "https://github.com/statiolake/current-exe-rs" }
to_absolute = { git = "https://github.com/statiolake/to-absolute-rs" }
anyhow = "1.0.27"
clap = { git = "https://github.com/clap-rs/clap" }
chrono = "0.4.11"
console = "0.10.0"
vsplit = "0.1.0"
itertools = "0.9.0"
splitv = "0.2.1"
indexmap = "1.3.2"
scopefunc = "0.1.1"
tempdir = "0.3.7"
scopeguard = "1.1.0"
fs_extra = "1.1.0"
walkdir = "2.3.1"
symlink = "0.1.0"
easy-scraper = "0.1.1"
scraper = "0.11.0"
maplit = "1.0.2"
if_chain = "1.0.0"
syn = { version = "1.0.17", features = ["full"] }
quote = "1.0.3"
proc-macro2 = "1.0.10"
wait-timeout = "0.2.0"
glob = "0.3.0"
