[package]
authors = ["statiolake <statiolake@gmail.com>"]
name = "procon-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
dirs = "6.0.0"
encoding = "0.2.33"
percent-encoding = "2.3.2"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["blocking", "cookies"] }
rpassword = "7.4.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
lazy_static = "1.5.0"
which = "8.0.0"
current_exe = { git = "https://github.com/statiolake/current-exe-rs" }
to_absolute = { git = "https://github.com/statiolake/to-absolute-rs" }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
chrono = "0.4.41"
console = "0.16.0"
vsplit = "0.1.0"
itertools = "0.14.0"
splitv = "0.2.1"
indexmap = "2.10.0"
scopefunc = "0.1.1"
tempdir = "0.3.7"
scopeguard = "1.2.0"
fs_extra = "1.3.0"
walkdir = "2.5.0"
symlink = "0.1.0"
easy-scraper = "0.2.0"
scraper = "0.24.0"
maplit = "1.0.2"
if_chain = "1.0.2"
syn = { version = "2.0.106", features = ["full", "visit", "visit-mut"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"
wait-timeout = "0.2.1"
glob = "0.3.3"
toml = "0.9.5"
